# flutter_classifier

./: .gitignore  .pre-commit-config.yaml  README.md  checkpoints.dvc  config.yaml  convert_onnx_to_tensorrt.sh  dataset.dvc  download_data.py  infer.py  launch_mlflow.py  pyproject.toml  train.py
.dvc/: config
conf/: config.yaml
conf/Data/: Data.yaml
conf/Train/: Train.yaml
configs/: config.yaml
configs/Data/: Data.yaml
configs/DataLoader/: DataLoader.yaml
configs/Infer/: Infer.yaml
configs/Train/: Train.yaml
configs/data_loader/: data_loader.yaml
data_processing/: load_data.py
flutter_model/: model.py  train_model.py
mlflow_serve/: mlflow_model.py
