[project]
name = "flutter-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "maximkes",email = "max_pechin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "boto3 (>=1.38.23,<2.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "dvc (>=3.59.2,<4.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "onnx (>=1.18.0,<2.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.poetry]
package-mode = false
